@@ -169,6 +169,8 @@
 	- fix: hard fail on locked dbopen if CDB locking not in use.
 	- fix: dbconfig with mp_mmapsize=16Mb/mp_size=1Mb for
 	  "everything ENOSPC" failure check.
+	- fix: don't total hard linked file size multiple times (#46286).
+	- add %dev(type,major,minor) directive to permit non-root dev build.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
